[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chain_sight"
version = "0.1.0"
description = "Blockchain data aggregator."
authors = [
    { name = "qf3l3k | ChainTools", email = "contact@chaintools.tech" }
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]

dependencies = [
    "SQLAlchemy~=2.0.28",
    "python-dateutil~=2.9.0.post0",
    "requests~=2.31.0",
    "pytest~=8.0.2",
    "python-dotenv>=1.0.1",
    "diagrams>=0.23.4"
    # Add other dependencies here
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
chain_sight = "chain_sight.__main__:main"
